--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300..900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -26,6 +28,7 @@ body{
 
 *{
     color: theme("colors.200");
+    font-family: "Darker Grotesque";
 }
 
 .nav-item:hover ul{
