--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,23 @@ body{
     opacity: 1;
     pointer-events: all;
 }
+
+::-moz-scrollbar-button {
+    display: none;
+    width: 0;
+    height: 0;
+}
+
+.custome-scrollbar::-webkit-scrollbar {
+    width: 1rem;
+    border-radius: 1rem;
+    background-color: #BABDD5;
+}
+
+.custome-scrollbar::-webkit-scrollbar-thumb{
+    border-radius: 1rem;
+    background-color: theme("colors.400");
+}
   
 /* if backdrop support: very transparent and blurred */
 @supports ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
